--- a/assets/css/scss/_front.scss
+++ b/assets/css/scss/_front.scss
@@ -192,7 +192,7 @@ main,
 footer {
 	margin: 0 auto;
 	max-width: var(--width-content);
-	padding: 2rem 1rem;
+	padding: 1rem 1rem;
 }
 
 header {
@@ -222,7 +222,7 @@ nav {
 	display: flex;
 	font-weight: bold;
 	justify-content: space-between;
-	margin-bottom: 7rem;
+	margin-bottom: 5rem;
 }
 nav ul {
 	list-style: none;
